--- a/style.css
+++ b/style.css
@@ -214,3 +214,13 @@ footer {
   from {opacity: .4}
   to {opacity: 1}
 }
+
+@media (max-width: 1024px) {
+    .grid-3 {
+        grid-template-columns: 100%;
+    }
+
+    .grid-3 .item {
+        margin-bottom: 20px;
+    }
+}
