--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .logo {
-    background-image: url(/logo.png);
+    background-image: url(logo.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
